# xbitinfo-data-compression

./: .gitignore  GiOCEAN.inf  GiOCEAN_e1.sfc_tavg_3hr_glo_L720x361_sfc.monthly.199801.nc4.inf  README.md  compress_with_keepbits.ini  compress_with_keepbits.py  compress_with_keepbits_many_files.py  find_keepbits.ini  find_keepbits.py  lossyness_quantification.ipynb  pixi_env.sh  pyproject.toml
scripts/: GiOCEAN_e1.sfc_tavg_3hr_glo_L720x361_sfc.monthly.199801.nc4.ini  compress_with_keepbits.py  compress_with_keepbits_many_files.ini  compress_with_keepbits_many_files.py  find_keepbits.ini  find_keepbits.py
